fix: correção dos tamanhos de fontes e do botão de dark mode

--- a/style/cabecalho.css
+++ b/style/cabecalho.css
@@ -14,16 +14,19 @@
 }
 
 .change-theme {
-    position: absolute;
+    position: fixed;
     top: 10px;
     right: 10px;
+    width: 50px;
+    height: 50px;
     padding: .8em;
-    border-radius: 15px;
-    background-color: var(--preto);
-    color: var(--branco);
+    border-radius: 50%;
+    background-color: var(--laranja);
+    color: var(--preto);
     font-weight: 700;
-    border: none;
     text-transform: uppercase;
+    font-size: 1.1em;
+    border: none;
 }
 
 @media screen and (min-width: 1024px) {
@@ -44,16 +47,23 @@
     }
 
     .change-theme {
-        position: absolute;
+        position: fixed;
         top: 10px;
         right: 10px;
+        width: 50px;
+        height: 50px;
         padding: .8em;
-        border-radius: 15px;
+        border-radius: 50%;
         background-color: var(--laranja);
         color: var(--preto);
         font-weight: 700;
         text-transform: uppercase;
         font-size: 1.1em;
+        border: none;
+    }
+
+    .cabecalho {
+        background-color: var(--preto-fundo);
     }
 
 }
