--- a/style/detalhes.css
+++ b/style/detalhes.css
@@ -1,5 +1,5 @@
 .detalhes {
-    margin: 2em 1em;
+    margin: 2em 3em;
     display: flex;
     flex-direction: column;
     gap: 1em;
