--- a/style/rodape.css
+++ b/style/rodape.css
@@ -1,5 +1,5 @@
 .rodape {
-    background-color: var(--preto-rodape);
+    background-color: var(--preto-fundo);
 }
 
 .rodape-redes {
