--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,7 @@
     --laranja: #FD703A;
     --cinza: #5E5E5E;
     --laranja-escuro: #EB5628;
-    --preto-rodape: #1d1d1b;
+    --preto-fundo: #1d1d1b;
 }
 
 body {
@@ -29,5 +29,10 @@ body {
 
 button {
     cursor: pointer;
+    transition: .2s;
+}
+
+button:hover {
+    opacity: .8;
 }
 
